--- a/style.css
+++ b/style.css
@@ -84,3 +84,12 @@ footer {
     margin-left: 125px;
 }
 
+#invert {
+    float: left;
+    padding: 5px;
+}
+
+#invertion {
+    float: left;
+    padding: 5px;
+}
