--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ html, body {
 }
 
 header {
-    height: 200px;
-
+    background-image: url(https://res.cloudinary.com/ddmn1cgda/image/upload/v1658332563/Getting_Your_Associates_Degree_In_Nursing_wgmedn.png);
+    background-repeat: no-repeat;
+    height: 360px;
     text-align: center;
-    background: #74b1d8;
     color: #fff5fa;
 }
 
