--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@ header {
 
 
 h1 {
-    font-size: 4rem;
-    padding-top: 35px;
+    background-image: url(https://res.cloudinary.com/ddmn1cgda/image/upload/c_scale,h_200/v1658333320/Getting_Your_Associates_Degree_In_Nursing_1_ik7csk.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-size: 3.5rem;
+    padding-top: 55px;
+    color: black;
 }
 
 .idk {
